[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeyDialog/InputKeyDialog.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeyDialog/Assets/InputKeyDialog_BodyBackground.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/InputKeyDialog/Assets/InputKeyDialog_SideBorder.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="InputKeyDialog" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyBackground" type="TextureRect" parent="."]
margin_right = 238.0
margin_bottom = 123.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 123.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 235.0
margin_right = 238.0
margin_bottom = 123.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 238.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 5 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 120.0
margin_right = 238.0
margin_bottom = 123.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 5 )
stretch_mode = 2

[node name="ContentContainer" type="MarginContainer" parent="."]
margin_right = 238.0
margin_bottom = 123.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 232.0
margin_bottom = 117.0
mouse_filter = 2

[node name="InsLabel" type="Label" parent="ContentContainer/VBoxContainer"]
margin_right = 226.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Enter a key"
align = 1
valign = 1

[node name="InputLabel" type="Label" parent="ContentContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 226.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "[A]"
align = 1
valign = 1

[node name="ButtonContainer" type="MarginContainer" parent="ContentContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 226.0
margin_bottom = 111.0
mouse_filter = 2
custom_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer/ButtonContainer"]
margin_top = 20.0
margin_right = 226.0
margin_bottom = 69.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="OkButton" parent="ContentContainer/VBoxContainer/ButtonContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 111.0
margin_bottom = 49.0
mouse_filter = 0

[node name="CancelButton" parent="ContentContainer/VBoxContainer/ButtonContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 115.0
margin_right = 226.0
margin_bottom = 49.0
mouse_filter = 0
[connection signal="on_button_released_with_button_left" from="ContentContainer/VBoxContainer/ButtonContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="ContentContainer/VBoxContainer/ButtonContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_on_button_released_with_button_left"]
